# sudoku-solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README
_build/: sudoku-solver
grids/0/: 105815177-v3-50-L1.ss  105815178-v3-50-L1.ss  105815179-v3-50-L1.ss  105815180-v3-50-L1.ss  105815181-v3-50-L1.ss  105815182-v3-50-L1.ss  18503654-v3-50-L1.ss  18503655-v3-50-L1.ss  18503656-v3-50-L1.ss  18503657-v3-50-L1.ss  18503658-v3-50-L1.ss  18503659-v3-50-L1.ss  373820463-v3-50-L1.ss  373820464-v3-50-L1.ss  373820465-v3-50-L1.ss  373820466-v3-50-L1.ss  373820467-v3-50-L1.ss  373820468-v3-50-L1.ss  438877175-v3-50-L1.ss  438877176-v3-50-L1.ss  438877177-v3-50-L1.ss  438877178-v3-50-L1.ss  438877179-v3-50-L1.ss  438877180-v3-50-L1.ss  482200891-v3-50-L1.ss  482200892-v3-50-L1.ss  482200893-v3-50-L1.ss  482200894-v3-50-L1.ss  482200895-v3-50-L1.ss  482200896-v3-50-L1.ss  506984432-v3-50-L1.ss  506984433-v3-50-L1.ss  506984434-v3-50-L1.ss  506984435-v3-50-L1.ss  506984436-v3-50-L1.ss  506984437-v3-50-L1.ss  543149267-v3-50-L1.ss  543149268-v3-50-L1.ss  543149269-v3-50-L1.ss  543149270-v3-50-L1.ss  (+56 more)
grids/1/: 18898912-v3-40-L1.ss  18898913-v3-40-L1.ss  18898914-v3-40-L1.ss  18898915-v3-40-L1.ss  18898916-v3-40-L1.ss  18898917-v3-40-L1.ss  198654151-v3-40-L1.ss  198654152-v3-40-L1.ss  198654153-v3-40-L1.ss  198654154-v3-40-L1.ss  198654155-v3-40-L1.ss  198654156-v3-40-L1.ss  231567988-v3-40-L1.ss  (+221 more)
src/: backtracking.cc  backtracking.hh  dump.cc  dump.hh  forward-checking.cc  forward-checking.hh  game.cc  game.hh  hill-climbing.cc  hill-climbing.hh  local-search.cc  local-search.hh  main.cc  simulated-annealing.cc  simulated-annealing.hh
(+1452 files in other folders)
